pushCommand almost working
the problem is the sending and receiving the raw bites meaning the objects